Make sure the person and professor profile sites are left-aligned properly, see issue #2

--- a/webapp/src/main/webapp/themes/tenderfoot_uos/css/tenderfoot.css
+++ b/webapp/src/main/webapp/themes/tenderfoot_uos/css/tenderfoot.css
@@ -136,6 +136,10 @@ body {
     margin-right: -15px;
 }
 
+.col-md-8 {
+    padding-left: 0px;
+}
+
 .row {
     background: #ffffff;
     margin-left: 0px;
